# sidebar-economy

./: LICENSE  README.md  pyproject.toml
src/endstone_sidebar/: sidebar_plugin.py
src/endstone_sidebar_economy/: __init__.py
