[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-sidebar-economy"
version = "0.0.1"
dependencies = []
authors = [
    { name = "causalguide" }
]
description = "Custom sidebar plugin for endstone with economy api placeholder"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "scoreboard", "sidebar", "economy", "economy pilot"]

[project.urls]
Homepage = "https://github.com/causal-guide/sidebar-economy"

[project.entry-points."endstone"]
sidebar = "endstone_sidebar:SidebarPlugin"
